Primeras dos diapos

--- a/index.html
+++ b/index.html
@@ -24,8 +24,42 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+                    <h1>Introducción a Jupyter</h1>
+                    <h4>(Antes conocido como <i>iPython Notebook</i>)</h4>
+                    </section>
+                    
+				<section>
+                    <h3>Jupyter ≊ Julia + Python + R</h3>
+                    <div class="well">   
+                       <a href="http://julialang.org/">
+                           <img border="0" src="./img/julia_logo.svg" height="120">
+                            </a> + 
+                        <a href="http://www.python.org/">
+                            <img border="0" src="./img/python_logo.svg" height="120">
+                            </a> + 
+                        <a href="http://www.r-project.org/">
+                            <img border="0" src="./img/R_logo.svg" height="120"></a>
+                    </div>
+                </section>
+                <section>
+                    <h2>Y muchos más...</h2>
+                        <ul>
+                            <li><a href="">Ruby</a></li>
+                            <li class="fragment"><a href="https://www.haskell.org/">Haskell</a></li>
+                            <li class="fragment">Javascript</li>
+                            <li class="fragment">Go</li>
+                            <li class="fragment">Scala</li>
+                            <li class="fragment">Octave</li>
+                            <li class="fragment">Bash</li>
+                            <li class="fragment">PowerShell</li>
+                        </ul>
+                        <aside><p>Ver lista completa 
+                    en <a href="https://github.com/jupyter/jupyter/wiki/Jupyter-kernels">https://github.com/jupyter/jupyter/wiki/Jupyter-kernels</a>, unos 85 a fecha de feb/2017</p>
+                        </aside>
+                </section>
+
+
 			</div>
 		</div>
 
