Seccion -Para qúe sirve-

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
 				<section>
                     <h1>Introducción a Jupyter</h1>
                     <h4>(Antes conocido como <i>iPython Notebook</i>)</h4>
-                    </section>
-                    
+                </section>
+                
+                <section>
+                    ¿Para qué sirve?
+                </section>
+
 				<section>
                     <h3>Jupyter ≊ Julia + Python + R</h3>
                     <div class="well">   
