--- a/index.html
+++ b/index.html
@@ -90,16 +90,13 @@ while True:
                     <h2>¿Para qué sirve?</h2>
                     
                     <ul>
-                        <li>Consola Python avanazada
+                        <li>Consola Python en web
                         <li>Realización de análisis y estudios</li>
                         <li>Informes en vivo</li>
                         <li>Panel de mando</li>
                     </ul>
                     <p>Son <b>fáciles de compartir</b>, <b>repetibles</b>, 
                     <b>verificables</b> y <b>modificables</b></p>
-
-
-                    *************** POR AQUI **************
 
                 </section>
 
