Slide con ordenes mágicas

--- a/index.html
+++ b/index.html
@@ -140,9 +140,25 @@ while True:
                                     <li>%% para ordenes que afectan a toda una celda</li>
                                 </ul>
                                 </li>
-                            <li><code>%lsmagic</code> es una orden mágica que
-                            lista todas las ordenes mágicas disponibles</li>
                         </ul>
+                    </section>
+                    <section>
+                        <h3>(Algunos) Comandos mágicos</h3>
+                        <ul>
+                            <li><code class="keyword">%who</code> y <code
+                                class="keyword">%whos</code> muestran variables definidas en
+                            el espacio actual</li>
+                            <li><code class="keyword">%lsmagic</code> es una orden mágica que
+                            lista todas las ordenes mágicas disponibles</li>
+                            <li><code class="keyword">%timeit</code> y <code class="keyword">%%timeit</code>
+                            realizan un informe del tiempo de ejecución de una
+                            línea o un fragmento de código</li>
+                        </ul>
+                        <p>Keywords:
+                        <code class="keyword">iPython</code>
+                        <code class="keyword">magic</code>
+                        <code class="keyword">commands</code>
+                        </p>
                     </section>
 
                 </section>
