Reescalado de algunas imagenes para que quede mejor en la exportación a PDF

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                     <h1>Jupyter</h1>
                     <h3>(Antes conocido como <i>iPython Notebook</i>)</h3>
                     <h4>Por Juan Ignacio Rodríguez de León (@jileon en twitter,
-                    @euribates en Telegram)</h4>
+                @euribates en Telegram)</h4>
+                    <p><small>Fuentes en <b><a
+                        href="https://github.com/euribates/Jupyter-Intro">https://github.com/euribates/Jupyter-Intro</a></b>
+                    </small></p>
                 </section>
                
                 <section>
@@ -145,14 +148,13 @@
 
                     <section>
                     <h3>Un interprete de Python <big size="120%">ampliado</big></h3>
-                     <p>Puede hacer todo lo que un interprete normal, y más cosas:</p>
+                     <p>Puede hacer todo lo que un interprete normal, y más:</p>
                         <ul>
                             <li class="fragment">Comandos "mágicos"</li>
                             <li class="fragment">Coloreado de sintaxis</li>
                             <li class="fragment">Autocompletado de código</li>
                             <li class="fragment">Introspección</li>
-                            <li class="fragment">Mejores ayudas, documentación</li>
-                            <li class="fragment">debugging, etc...</i></li>
+                            <li class="fragment">Mejores ayudas, documentación, debugging, etc...</i></li>
                         </ul>
                     </section>
 
