--- a/godot.html
+++ b/godot.html
@@ -497,6 +497,38 @@ func _process(delta):
                     ```
                 </section>
 
+                <section data-markdown>
+                    ###  método engines_off
+
+                    Este método simula apagar los motores de la nave
+                    ```
+                    ...
+                    func engines_off():
+                        acc = 0
+                        $Sprite.frame = 0
+                    ...
+                    ```
+                </section>
+
+                
+                <section data-markdown>
+                    ### Evento de soltar el botón
+                    ```
+func _input(event):
+    if event.is_action('ui_left'):
+        direction = direction.rotated(-rot_speed)
+        $Sprite.rotation = direction.angle()
+    if event.is_action('ui_right'):
+        direction = direction.rotated(rot_speed)
+        $Sprite.rotation = direction.angle()
+    if event.is_action_pressed('ui_up'):
+        engines_on()
+    if event.is_action_released('ui_up'):
+        engines_off()
+```
+                </section>
+
+
                 <section>
                     <h3>Inkscape</h3>
                 </section>
