--- a/godot.html
+++ b/godot.html
@@ -126,7 +126,7 @@ func _process(delta):
 
                 <section>
                     <h3>Crear otra escena</h3>
-                    <p>con una animacion de explosión usando este
+                    <p>con una animación de explosión usando este
                     <i>spritesheet</i></p>
                     <img src="img/godot/explosion.png">
                 </section>
